--- a/app/views/levels/utility_classes.html.erb
+++ b/app/views/levels/utility_classes.html.erb
@@ -2,5 +2,17 @@
 <!-- Add utility classes and/or elements as needed to achieve the target appearance. -->
 
 <div>
+<a href="/">Table of contents</a>
+</div>
+
+<hr>
+
+<div class = "d-flex flex-row">
+  <div class="p-2 bg-primary">First</div>
+  <div class="p-2 bg-success">Second</div>
+  <div class="p-2 bg-danger">Third</div>
+</div>
+
+<div>
   Lorem ipsum, dolor sit amet consectetur adipisicing elit. Vel ad debitis iste minima molestiae repellat magni? Voluptas, odit voluptate quasi esse ea iure quibusdam error at architecto veritatis, beatae nihil?
 </div>
