--- a/app/views/levels/primary_button.html.erb
+++ b/app/views/levels/primary_button.html.erb
@@ -1,7 +1,24 @@
-<span>Click me!</span>
+<span class = "my_button">Click me!</span>
 
 <style>
+  .my_button {
+    background-color: blue;
+    color: white;
+    font-size: 22px;
+    padding: 15px;
+    border-radius: 15px;
+    border: 10px;
+  }
 
+  .my_button:hover {
+    background-color: teal;
+
+  }
+
+  .my_button:active {
+    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -webkit-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  -moz-box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+  }
   /* Write your CSS here to make the span look like a button. */
-
 </style>
